--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:padding="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <EditText
+            android:id="@+id/studentId"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Student ID" />
+
+        <EditText
+            android:id="@+id/fullName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Full Name" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Choose Hobbies" />
+
+        <CheckBox
+            android:id="@+id/chess"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Chess" />
+
+        <CheckBox
+            android:id="@+id/cycling"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cycling" />
+
+        <CheckBox
+            android:id="@+id/swimming"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Swimming" />
+
+        <CheckBox
+            android:id="@+id/programming"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Programming" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select Your Personality" />
+
+        <RadioGroup
+            android:id="@+id/personalityGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/introvert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Introvert" />
+
+            <RadioButton
+                android:id="@+id/extrovert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Extrovert" />
+
+            <RadioButton
+                android:id="@+id/ambivert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ambivert" />
+        </RadioGroup>
+
+        <EditText
+            android:id="@+id/learningExperience"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Type Your Learning Experience" />
+
+        <Button
+            android:id="@+id/submitForm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="SUBMIT FORM" />
+
+    </LinearLayout>
+</ScrollView>
